# fifa_pred

./: .gitignore  CLAUDE.md  README.md  env.example  pyproject.toml  setup.md
config/: data_sources.yaml  entity_overrides.yaml  settings.yaml  teams.yaml  tournament.yaml  venues.csv
docs/: ai_rules.md  arch.md  data_exp.md  data_sources.md  folder_struct.md  setup.md  windsurf-prompts-detailed.md  windsurf-prompts.md
scripts/: audit_squad_coverage.py  build_2026_training_rows.py  build_player_competition_stats.py  check_cache_key.py  check_lambda_bounds.py  dispersion_check.py  elo_calibration_experiment.py  fit_real_model.py  full_experiment.py  gen_bracket_data.py  pull_squads.py  report.py  time_50k.py
src/wcpredict/: cli.py
src/wcpredict/adjust/: __init__.py  layer.py  magnitude.py  provenance.py
src/wcpredict/data/: build_table.py  entity_resolve.py  ingest.py
src/wcpredict/eval/: __init__.py  calibration.py
src/wcpredict/explain/: __init__.py  narrate.py
src/wcpredict/features/: engineer.py
src/wcpredict/llm/: __init__.py  extract.py  schema.py
src/wcpredict/model/: calibration.py  match_model.py  shootout.py
src/wcpredict/sim/: bracket.py  sampler.py  simulator.py
src/wcpredict/web/: __init__.py  app.py  service.py
src/wcpredict/web/static/: app.js  (+2 more)
tests/: test_adjust.py  test_bracket.py  test_build_table.py  test_calibration.py  test_cli.py  test_eval_calibration.py  test_extract.py  test_features.py  test_magnitude.py  test_no_leakage.py  test_sampler.py  test_side_modules_isolation.py  test_simulator_perf.py  test_web_service.py
